tests/files/lexer_tests/should_fail/004.cmdr
// Illegal character in string (ascii 4)
var = '';